# foritech-secure-system

./: .gitattributes  .gitignore  .gitignore.bak.1756136336  .pre-commit-config.yaml  0001-tests-pick-supported-kem.patch  0002-tests-pythonpath-bootstrap.patch  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  a.enc  a.out  backup_to_minio.py  ca.key  ca.pem  ca_cert.pem  cover-letter.md  docker-compose.yml  fix-all.patch  hybrid_cert.pem  leaf_cert.pem  leaf_spki.pem  profile  proposal.md  pyproject.toml  pyproject.toml.bak.1756136628  pytest.ini  repo_sanitize.sh  repo_support.sh  restore_from_minio.py  setup.sh  spki_self.key  spki_self.pem
sdk/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pyproject.toml.bak.1756161824  pytest.ini  requirements.txt  setup.sh
sdk/examples/: unwrap_file.py  unwrap_file.py.bak  wrap_file.py  wrap_file.py.bak
sdk/sdk/: pyproject.toml
sdk/src/foritech/: __init__.py  api.py  cli.py  cli.py.bak.1756161824  key_utils.py  x509_utils.py
sdk/src/foritech/cli/: __init__.py  __main__.py  main.py  main.py.bak.1756214134
sdk/src/foritech/crypto/: __init__.py  hybrid_wrap.py  json_bundle.py  pqc_kem.py  stream_core.py  unwrap_core.py  wrap_core.py
sdk/src/foritech/pki/: x509_tools.py  x509_tools.py.bak.1756209524  x509_tools.py.bak.1756211043  x509_tools.py.bak.1756214117
sdk/tests/: conftest.py  test_api_roundtrip.py  test_cli_hybrid.py  test_examples_cli.py  test_hybrid_wrap.py  test_json_bundle.py  test_kem_roundtrip.py  test_x509.py  test_x509.py.bak
(+144 files in other folders)
