[project]
name = "foritech"
version = "0.5.1"
description = "Foritech SDK/API for PQC file wrap/unwrap with CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Foritech" }]
license = "MIT"
dependencies = ["typing-extensions>=4.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.8"]
dependencies = [
  "typing-extensions>=4.6",
  "cryptography>=42.0.0",
]

[project.scripts]
foritech = "foritech.cli.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["sdk/src"]
include = ["foritech*"]

[tool.ruff]
line-length = 100
target-version = "py311"
